# Socket

./: CMakeLists.txt  README.md
include/: Config.hpp  Network.hpp  Transfer.hpp
src/: Network.cpp  Transfer.cpp  client.cpp  server.cpp
